[package]
name = "pproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait="0.1"
pingora = { version = "0.6.0", features = [ "lb","openssl","proxy"] }
tokio = { version = "1.45.1", features = ["full"] }
env_logger = "0.11.8"
serde = "^1.0.0"
serde_derive = "^1.0.0"
dashmap = "6.1.0"
futures = "0.3.31"
reqwest = { version = "0.12.24" , features = ["json"]}