[package]
name = "pproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait="0.1"
pingora = { version = "0.6.0", features = [ "lb","openssl","proxy"] }
tokio = { version = "1.45.1", features = ["full"] }
env_logger = "0.11.8"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "1.0.145"
dashmap = "6.1.0"
reqwest = { version = "0.12.24" , features = ["json", "blocking"]}
clap = { version = "4.5.52", features = ["derive", "env"] }
twelf = { version =  "0.15.0" , features = ["toml"] }
tokio-retry = "0.3"
base64 = "0.22.1"
pem ="3.0.6"
vaultrs = "0.7.4"
vaultrs-login = "0.2.0"
bytes = "1.11.0"
anyhow = "1.0.100"
pingora-core = "0.6.0"
aws-config = "1.8.11"
aws-sdk-route53 = "1.103.0"
rand = "0.9.2"
axum = "0.8.8"
axum-server = "0.8.0"
log = "0.4.28"
ftail = "0.3.1"

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
